<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="drawer_items">
        <item>Channels</item>
        <item>Chat</item>
        <item>Favorites</item>
        <item>Access Tokens</item>
        <item>Server Info</item>
        <item>Comment</item>
        <item>Register</item>
    </string-array>

    <string name="channels">Channels</string>
    <string name="userJoin">Join channel</string>
    <string name="userSpeak">Speak</string>
    <string name="noServers">No servers added.\nPress the \'add\' button on the action bar to begin.</string>
    <string name="noChannels">Channel list empty</string>
    <string name="noUsers">no users</string>
    <string name="serverAdd">Add Server</string>
    <string name="serverChange">Change Server</string>
    <string name="serverPassword">Password</string>
    <string name="serverUsername">Username</string>
    <string name="serverPort">Port</string>
    <string name="serverHost">Address</string>
    <string name="serverName">Label</string>
    <string name="sendText">Send</string>
    <string name="app_name">Plumble</string>
    <string name="server_deleted">Server deleted</string>
    <string name="chat_message">Chat</string>
    <string name="chatReceiverLabel">Receiver</string>
    <string name="chatReceiverPrompt">Select the receiver</string>
    <string name="connectionProgressTitle">Establishing Connection</string>
    <string name="connectionProgressConnectingMessage">Connecting to Mumble</string>
    <string name="connectionProgressSynchronizingMessage">Synchronizing data with Mumble</string>
    <string name="connectionProgressDisconnectingMessage">Disconnecting…</string>
    <string name="defaultServerPort">64738</string>
    <string name="title_section2">Chat</string>
    <string name="title_section1">Channel</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_channel">Channel</string>
    <string name="pressKey">Press a hardware key to bind to push-to-talk.</string>
    <string name="pressKeyInfo">Note: due to limitations in Android, the app must be open to use hardware key push to talk.</string>
    <string name="ptt">PUSH TO TALK</string>
    <string name="mute">Mute</string>
    <string name="deafen">Deafen</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnectSure">Are you sure you want to disconnect from Mumble?</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="preferences">Preferences</string>
    <string name="togglelocalmute">Toggle Local Mute</string>
    <string name="chat">Chat</string>
    <string name="permDenied">Permission denied!</string>
    <string name="connectionRefused">Connection Refused</string>
    <string name="sureDeleteServer">Are you sure you want to delete this server?</string>
    <string name="disconnected">Disconnected</string>
    <string name="kickedMessage">Kicked from server.\nReason: %s</string>
    <string name="loading">Loading…</string>
    <string name="reset_key">Reset Key</string>
    <string name="externalStorageUnavailable">External storage unavailable, cannot load certificate</string>
    <string name="audioQualitySum">The audio bit rate at which Plumble will try to operate.</string>
    <string name="forceTcp">Force TCP</string>
    <string name="forceTcpSum">Whether to force TCP (disable UDP) communications.</string>
    <string name="addFavorite">Add Favorite</string>
    <string name="removeFavorite">Remove Favorite</string>
    <string name="viewFavorites">View Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="favoriteRemoved">Favorite removed.</string>
    <string name="favoriteAdded">Favorite added.</string>
    <string name="noFavorites">No favorited channels.</string>
    <string name="accessTokens">Access Tokens</string>
    <string name="accessAdd">Add Access Token</string>
    <string name="pushToTalkHint">(tick checkbox to enable toggle)</string>
    <string name="messageReceived">New message</string>
    <string name="generateCert">Generate Certificate</string>
    <string name="generateCertSuccess">Your certificate has been set and saved as %s!</string>
    <string name="generateCertFailure">Failed to generate certificate.</string>
    <string name="generateCertProgress">Generating certificate…</string>
    <string name="search">Search</string>
    <string name="searchHint">Search channels and users</string>
    <string name="undocumentedWakeLock">Unfortunately, it doesn\'t look like we can provide proximity sensor wake lock support for your device. Please change the call mode to speakerphone.</string>
    <string name="amplifier">Amplifier</string>
    <string name="recordingVolume">Recording Volume Boost</string>
    <string name="quickConnect">Quick Connect</string>
    <string name="connect">Connect</string>
    <string name="connectToServer">Connect to Server</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="messageToUser">Type message to user \'%s\'</string>
    <string name="messageToChannel">Type message to channel here</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="clearChat">Clear Chat</string>
    <string name="connected">Connected</string>
    <string name="plumbleConnected">Plumble Connected</string>
    <string name="plumbleDisconnected">Plumble Disconnected</string>
    <string name="lostConnection">Lost connection to the server.</string>
    <string name="resume">Resume</string>
    <string name="channel">Channel</string>
    <string name="user">User</string>
    <string name="server">Server</string>
    <string name="chat_message_to">To</string>
    <string name="chat_notify_moved">%1$s moved in from %2$s by %3$s.</string>
    <string name="chat_notify_muted_deafened">Muted and deafened.</string>
    <string name="chat_notify_muted">Muted.</string>
    <string name="chat_notify_unmuted">Unmuted.</string>
    <string name="chat_notify_unmuted_undeafened">Unmuted and undeafened.</string>
    <string name="chat_notify_now_muted_deafened">%s is now muted and deafened.</string>
    <string name="chat_notify_now_muted">%s is now muted.</string>
    <string name="chat_notify_now_unmuted">%s is now unmuted.</string>
    <string name="chat_notify_now_unmuted_undeafened">%s is now unmuted and undeafened.</string>
    <string name="chat_notify_connected">%s connected.</string>
    <string name="chat_notify_disconnected">%s disconnected.</string>
    <string name="unknown">Unknown</string>
    <string name="server_list_title_favorite">Favourites</string>
    <string name="server_list_title_lan">LAN</string>
    <string name="server_list_title_public_internet">Public Internet</string>
    <string name="ping">Ping</string>
    <string name="sort">Sort</string>
    <string name="sortBy">Sort by…</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="share">Share</string>
    <string name="shareMessage">Join this Mumble server with Plumble! %s</string>
    <string name="noServerInfo">Ping to fetch info</string>
    <string name="status_notify_muted_and_deafened">Muted and deafened.</string>
    <string name="status_notify_muted">Muted.</string>
    <string name="comment">Comment</string>
    <string name="close">Close</string>
    <string name="retrieving">Retrieving…</string>
    <string name="search_name">Name</string>
    <string name="search_country">Country</string>
    <string name="preferences_immutable">This setting cannot be changed while connected to a server.</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="fullscreen_chat">Chat</string>
    <string name="fullscreen_channel">Channel</string>
    <string name="fetchingServers">Please wait, fetching list of public servers.</string>
    <string name="information">Information</string>
    <string name="register">Register Self</string>
    <string name="userControl">User Control</string>
    <string name="registerSelfSuccess">Sent registration request</string>
    <string name="error_fetching_servers">Error fetching servers!\nCheck your internet connection.</string>
    <string name="coming_soon">This feature is coming soon.</string>
    <string name="channel_user_row_chat">CHAT</string>
    <string name="channel_user_row_mute">MUTE</string>
    <string name="channel_user_row_muted">MUTED</string>
    <string name="channel_user_row_comment">COMMENT</string>
    <string name="channel_user_row_registered">REGISTERED</string>
    <string name="channel_row_join">JOIN</string>
    <string name="channel_row_favourite">FAVOURITE</string>
    <string name="channel_row_close">CLOSE</string>
    <string name="search_channel_users">%d users</string>
    <string name="reconnecting">Reconnecting in %d seconds.</string>
    <string name="tapToReconnect">Tap to reconnect</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    
    <string name="hint_ptt">Push to Talk</string>
    <string name="hint_ptt_summary">Simply press this button down to talk. Double-tap to toggle it.</string>
    <string name="hint_server_add">Welcome to Plumble</string>
    <string name="hint_server_add_summary">To begin, add a favourite server by pressing the add button on the action bar.</string>
    <string name="hint_switching">Switching Between Views</string>
    <string name="hint_switching_summary">Switch between the chat and channel views by using the buttons in the top left, or swiping.</string>
</resources>
