<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/channel_user_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/channel_user_row_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/userRowState"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:src="@drawable/plumble" />

        <TextView
            android:id="@+id/userRowName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="[Name]"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userFlags"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/push_to_talk_background"
        android:orientation="horizontal"
        android:visibility="gone" >

            <TextView
                android:id="@+id/channel_user_row_chat"
            	style="@style/Plumble.BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/channel_user_row_chat"
                android:drawableTop="@drawable/ic_action_chat_dark"
            	android:padding="2dp"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/channel_user_row_mute"
            	style="@style/Plumble.BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/channel_user_row_mute"
                android:drawableTop="@drawable/ic_action_audio_muted"
            	android:padding="2dp"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/channel_user_row_comment"
            	style="@style/Plumble.BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/channel_user_row_comment"
                android:drawableTop="@drawable/ic_action_comment"
            	android:padding="2dp"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/channel_user_row_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/channel_user_row_registered"
                android:drawableTop="@drawable/ic_registered"
            	android:padding="2dp"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/channel_user_row_close"
            	style="@style/Plumble.BorderlessButton"
           	 	android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/channel_row_close"
                android:drawableTop="@drawable/ic_action_delete_dark"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:textSize="10sp" />
    </LinearLayout>

</FrameLayout>