<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="NewApi" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="10dp" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/server_row_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center_vertical"
                    android:text="@string/serverHost"
                    android:textColor="#808080"
                    android:textSize="24sp" 
                    android:ellipsize="end"
                    android:lines="1"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/server_row_favorite"
                    style="@style/Plumble.BorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_favorite_dark" />
                
                </LinearLayout>
        
        <RelativeLayout
            android:id="@+id/server_row_info"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingBottom="2dp">
            
            <TextView 
                android:id="@+id/server_row_version_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:textColor="#808080"
				android:focusable="false"
                android:text="@string/noServerInfo"
                android:lines="1"/>
            
            <TextView 
                android:id="@+id/server_row_usercount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:textColor="#808080"
                android:singleLine="true"
                android:text="15/100"
                android:layout_alignParentRight="true"/>

                <ProgressBar
                    android:id="@+id/server_row_ping_progress"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true" />

        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_server_light" />

                <TextView
                    android:id="@+id/server_row_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serverHost"
                    android:textColor="#808080" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_server_location" />

                <TextView
                    android:id="@+id/server_row_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Somewhere"
                    android:textColor="#808080" />
            </LinearLayout>
        </LinearLayout>
            <Button
                android:id="@+id/server_row_button1"
                style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_toLeftOf="@+id/verticalSeparator"
                android:text="@string/connect"
                android:textColor="@color/abs__holo_blue_light"
                android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
